# PixelGenome-Bridge_Website-Downloader

./: .env.example  .gitignore  Dockerfile  FUNCIONAMENTO.md  README.md  app.py  downloader.py  entrypoint.sh  pyproject.toml  requirements.txt
templates/: index.html
templates/css/: styles.css
templates/js/: api.js  config.js  downloader.js  generator.js  script.js  state.js  storage.js  ui.js  utils.js
