[project]
name = "10-website-downloader"
version = "0.1.0"
description = "LayoutGenome Bridge: URL validation, site ZIP download, and AI-generated design-system HTML"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "requests>=2.32.5",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "urllib3>=2.6.3",
]
